# sss

./: .gitignore  LICENSE  README.md
.github/workflows/: libraries.yaml  main.yaml
blobular/: .gitignore  LICENSE.txt  README.md  deploy.md  gunicorn_conf.py  pyproject.toml
blobular/blobular/: __about__.py  __init__.py  __main__.py  cli.py  console.py  filesnap.py  login.py  registry.py  settings.py  state.py  util.py
blobular/blobular/api/: api.py  app.py  authentication.py  github_login.py  persist.py  settings.py  web.py
blobular/blobular/cli/: __main__.py  authenticate.py  cli.py  cloudutils.py  console.py  filesnap.py  login.py  settings.py  state.py
blobular/blobular/store/: __init__.py  abstract.py  cache.py  cloud.py  db.py  localfile.py  mem.py  s3.py
blobular/tests/: test_e2e.py
dxd/: README.md  pyproject.toml
dxd/dxd/: __init__.py  column.py  engine.py  expr.py  kvstore.py  parser.py  pattern.py  pd.py  postgres_engine.py  q.py  sqlite_engine.py  table.py
dxd/tests/: conftest.py  test_pd.py  test_q.py  test_tinyorm.py
hitsave/: LICENSE.txt  README.md  pyproject.toml
hitsave/hitsave/: __about__.py  __init__.py
hitsave/hitsave/cloud/: api.py
hitsave/hitsave/common/: __init__.py  binding.py  digest.py  eval.py  evalstore.py  symbol.py
hitsave/hitsave/local/: __init__.py  cli.py  console.py  decorator.py  session.py  settings.py
hitsave/hitsave/local/inspection/: __init__.py  codegraph.py  symbol.py
hitsave/hitsave/util/: graph.py
hitsave/tests/: strat.py  test_codegraph.py  test_deephash.py  test_fibo.py  test_misc.py  test_save.py  test_torch.py
hitsave/tests/snapshots/test_codegraph/test_graph_snap/: test_graph_snap.txt
hitsave/tests/snapshots/test_codegraph/test_module_imports/: code_imports.txt  externs.txt
hitsave/tests/snapshots/test_codegraph/test_symtable/: test_symtable.txt
hitsave/tests/snapshots/test_deephash/test_deephash_snapshot/: example_hashes.txt
hitsave/tests/snapshots/test_util/test_decorate/: hello
hitsave/tests/snapshots/test_util/test_human_size/: bytes
hxh/: README.md  pyproject.toml
hxh/hxh/: __init__.py  element.py  fiber.py  listdiff.py  manager.py  patch.py  proxy_reactor.py  rendering.py  util.py  vdom.py
hxh/tests/: __init__.py  test_listdiff.py
miniscutil/: README.md  pyproject.toml
miniscutil/miniscutil/: __about__.py  __init__.py  adapt.py  asyncio_helpers.py  config.py  current.py  deep.py  deepeq.py  dictdiff.py  dispatch.py  misc.py  ofdict.py  sum.py  type_util.py
miniscutil/miniscutil/lsp/: README.md  __init__.py  document.py  server.py  types.py
miniscutil/miniscutil/rpc/: extrarpc.py  io_transport.py  jsonrpc.py  starlette_ws_transport.py  transport.py  websocket_transport.py
miniscutil/tests/: __init__.py  test_adapt.py  test_classdispatch.py  test_config.py  test_current.py  test_deepeq.py  test_humansize.py  test_lsp.py  test_ofdict.py  test_typing.py  test_util.py
server/: README.md  deploy.md  gunicorn_conf.py  pyproject.toml
server/server/: api.py  app.py  authentication.py  github_login.py  persist.py  web.py
tinyorm/: README.md  pyproject.toml
tinyorm/tests/: conftest.py  test_tinyorm.py
tinyorm/tinyorm/: column.py  expr.py  pattern.py  postgres_engine.py  sqlite_engine.py  table.py
uxu/: .gitignore  README.md  pyproject.toml
uxu/tests/: test_listdiff.py  test_patch.py
uxu/uxu/: __about__.py  __init__.py  element.py  fiber.py  html.py  listdiff.py  manager.py  patch.py  persistence.py  rendering.py  serve.py  session.py  textnode.py  vdom.py
uxu/uxu/lsp/: __init__.py  server.py
uxu/uxu/rpc/: __init__.py  jsonrpc.py  transport.py
uxu/web/: build.mjs  package-lock.json  package.json  server.mjs
uxu/web/src/: app.ts  reactor.ts  rpc.ts
