[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blobular"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "E.W.Ayers", email = "contact@edayers.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "blake3",
  "dxd",

  # cli deps
  "requests",
  "rich",
  "typer",

  # api deps
  "pydantic",
  "pydantic[email]",
  "pydantic[dotenv]",
  "python-jose", # jwts
  "fastapi",
  "python-multipart",
  "aiohttp", # for communicating with github
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/EdAyers/blobular#readme"
Issues = "https://github.com/EdAyers/blobular/issues"
Source = "https://github.com/EdAyers/blobular"

[tool.hatch.version]
path = "blobular/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=blobular --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "blobular/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[project.scripts]
blobular = "blobular.cli.cli:app"
