[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hitsave"
description = 'Cache anything.'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "E.W.Ayers", email = "contact@edayers.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "blake3",
  "aiohttp",
  "typer",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/EdAyers/sss/tree/main/hitsave#readme"
Issues = "https://github.com/unknown/hitsave/issues"
Source = "https://github.com/unknown/hitsave"

[tool.hatch.version]
path = "hitsave/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "pytest-snapshot",
  "hypothesis",
  "numpy",
  "torch",
  "miniscutil @ {root:uri}/../miniscutil",
  "dxd @ {root:uri}/../dxd",
  "uxu @ {root:uri}/../uxu",
  "blobular @ {root:uri}/../blobular "
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=hitsave --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[tool.hatch.envs.api]
dependencies = [
  "boto3",
  "pydantic",
  "pydantic[email]",
  "pydantic[dotenv]",
  "psycopg", "psycopg-binary",
  "python-jose", # jwts
  "fastapi",
  "python-multipart",
  "aiohttp", # for communicating with github
  "gunicorn",
  "uvicorn",
  "miniscutil @ {root:uri}/../miniscutil",
  "dxd @ {root:uri}/../dxd",
  "uxu @ {root:uri}/../uxu",
  "blobular @ {root:uri}/../blobular "
]

[tool.hatch.envs.api.scripts]
prod = "gunicorn -c gunicorn_conf.py hitsave.api.app:app"
dev = "uvicorn hitsave.api.app:app --reload --port 3000"


[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "hitsave/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[project.scripts]
hitsave = "hitsave.local.cli:app"
